feat: :sparkles: the creation of the invoice module is finished
methods were created to obtain the data from the store invoices
