# src/app/api/api_actualizar/models.ts
@@ -4,5 +4,9 @@ export { GetCitiesDto } from './models/get-cities-dto';
 export { GetClientDto } from './models/get-client-dto';
 export { GetProvincesDto } from './models/get-provinces-dto';
 export { GetRetentionDto } from './models/get-retention-dto';
+export { InvoiceDto } from './models/invoice-dto';
+export { InvoiceDetDto } from './models/invoice-det-dto';
+export { InvoiceDetailsDto } from './models/invoice-details-dto';
+export { MethodPaymentDto } from './models/method-payment-dto';
 export { OfficesDto } from './models/offices-dto';
 export { RetentionParams } from './models/retention-params';
