# src/app/api/api_actualizar/models/invoice-det-dto.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface InvoiceDetDto {
+  cantidad?: null | string;
+  codigo_Producto?: null | string;
+  descripcion?: null | string;
+  descuento?: null | string;
+  precio?: null | string;
+  precio_Total?: null | string;
+}
