# src/app/api/api_actualizar/models/invoice-details-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+import { InvoiceDetDto } from './invoice-det-dto';
+import { MethodPaymentDto } from './method-payment-dto';
+export interface InvoiceDetailsDto {
+  invoiceMethodPayment?: null | Array<MethodPaymentDto>;
+  invoicesDet?: null | Array<InvoiceDetDto>;
+}
