# src/app/api/api_actualizar/models/invoice-dto.ts
@@ -1,0 +1,21 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface InvoiceDto {
+  descuento?: null | string;
+  estacionId?: null | string;
+  fecha_Factura?: null | string;
+  iva?: null | string;
+  moneda?: null | string;
+  nombre?: null | string;
+  nombre_Razon?: null | string;
+  numero_Factura?: null | string;
+  numero_Idcliente?: null | string;
+  oficina?: null | string;
+  serie_Factura?: null | string;
+  subtotal?: null | string;
+  tipo_Documento?: null | string;
+  tipo_Idcliente?: null | string;
+  totalfactura?: null | string;
+  userid?: null | string;
+  valoriva?: null | string;
+}
