# src/app/api/api_actualizar/models/method-payment-dto.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface MethodPaymentDto {
+  descripcion?: null | string;
+  forma_Pago?: null | string;
+  serie_Factura?: null | string;
+  valor?: null | string;
+}
